--- a/styles/summary.css
+++ b/styles/summary.css
@@ -359,8 +359,3 @@ svg.circle:hover {
     transform: scale(0.6);
   }
 }
-@media (min-height: 667px) and (max-height: 823px) {
-  .summary__container {
-    margin-top: -100px;
-  }
-}
